Fixed crease overflowing out of parent div and positioned photo id

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ body {
   width: 90%;
   height: 100%;
   padding: 12px 12px 12px 12px;
-  border-radius: 4px 4px 4px 4px;
+  border-radius: 11px 11px 11px 11px;
 
   font-size: 15px;
   font-family: 'Inconsolata';
@@ -47,29 +47,32 @@ body {
   height: 500px;
   max-width:100%;
   max-height:100%;
+  overflow: hidden;
 }
 
 .photoid {
   background-image: url('../images/Cal1PhotoID.jpg');
   width: 120px;
-  height: 120px;
+  height: 140px;
   border: 2px solid #386890;
   background-size: 120px;
   border-radius: 2px 2px 2px 2px;
-  margin:0px 5px -5px auto;
+  margin: 30px 5px -5px 20px;
+  position: absolute;
 }
 
 #crease {
   background-color: black;
   opacity: 0.8;
   width: 100%;
-  height: 3px;
+  height: 1.5px;
   max-width:100%;
   max-height:100%;
-  position: absolute;
+  position: relative;
   top: 50%;
   transform: translateY(-50%)
   bottom: 0;
+  overflow:hidden;
 }
 
 
